# Project-Chrono

data/: load_system_matrices.m
data/fea/: Cube.mesh  Femur.mesh  FemurCoarse.mesh  FemurFine.mesh  FemurLow.mesh  FemurVeryFine.mesh  HeedsInput.json  Mesh_3.mesh  Milad_AC-GaitCycle.json  Tibia-1.mesh  Tibia-1Low.mesh  Tibia-2.mesh  Tibia-2Low.mesh  Tours.mesh  XYZ.csv  XYZOriginal.csv  ZXY.csv  ZXYOriginal.csv
data/fea/ShortCodes/: CalcTimeAveDirections  PlotForces-GaitCycle.p  xyzTozxy.m
data/fsi/: FSI_Validation.py  demo_Indentation.py  demo_fin.pvsm  demo_indentation.pvsm  test.py  untitled0.py
data/fsi/ref_data/: Antoci_x.txt  Antoci_y.txt  Ex10X.txt  Ex10Y.txt  YangEtAl10X.txt  YangEtAl10Y.txt
src/chrono/core/: ChCSR3Matrix.cpp  ChMatrix.h  ChMatrix33.h  ChMatrixDynamic.h  ChMatrixNM.h  ChQuaternion.cpp  ChQuaternion.h
src/chrono/lcp/: ChLcpSystemDescriptor.cpp  ChLcpSystemDescriptor.h
src/chrono/physics/: ChContactContainerDEM.cpp  ChContactDEM.h  ChLinkLock.cpp
src/chrono/utils/: ChUtilsGenerators.cpp  ChUtilsSamplers.h
src/chrono_fea/: CMakeLists.txt  ChBuilderBeam.cpp  ChBuilderBeam.h  ChContactSurfaceMesh.cpp  ChContactSurfaceMesh.h  ChElementCableANCF.h  ChElementGeneric.cpp  ChElementShellANCF.cpp  ChElementShellANCF.h  ChLinkPointFrameGeneral.cpp  ChLinkPointFrameGeneral.h  ChMesh.cpp  ChMeshFileLoader.cpp  ChMeshFileLoader.h  ChVisualizationFEAmesh.cpp  ChVisualizationFEAmesh.h
src/chrono_fsi/: .ChFsiForceParallel.cu.swp  CMakeLists.txt  ChBce.cu  ChBce.cuh  ChCollisionSystemFsi.cu  ChCollisionSystemFsi.cuh  ChConfigFSI.h.in  ChDeviceUtils.cu  ChDeviceUtils.cuh  ChFluidDynamics.cu  ChFluidDynamics.cuh  ChFsiDataManager.cu  ChFsiDataManager.cuh  ChFsiForce.cu  ChFsiForce.cuh  ChFsiForceI2SPH.cu  ChFsiForceI2SPH.cuh  ChFsiForceIISPH.cu  ChFsiForceIISPH.cuh  ChFsiForceParallel.cu  ChFsiForceParallel.cuh  ChFsiForceXSPH.cu  ChFsiForceXSPH.cuh  ChFsiForceiSPH.cu  ChFsiForceiSPH.cuh  ChFsiGeneral.cu  ChFsiGeneral.cuh  ChFsiInterface.cpp  ChFsiInterface.cu  ChFsiInterface.cuh  ChFsiInterface.h  ChFsiLinearSolver.cpp  ChFsiLinearSolver.h  ChFsiTypeConvert.h  ChParams.cuh  ChSphGeneral.cu  ChSphGeneral.cuh  ChSphKernels.cu  ChSystemFsi.cpp  ChSystemFsi.h  (+21 more)
src/chrono_fsi/utils/: ChUtilsGeneratorBce.cpp  ChUtilsGeneratorBce.cu  ChUtilsGeneratorBce.h  ChUtilsGeneratorFsi.cpp  ChUtilsGeneratorFsi.h  ChUtilsPrintSph.cpp  ChUtilsPrintSph.cu  ChUtilsPrintSph.cuh  ChUtilsPrintSph.h  ChUtilsReadSph.cpp  ChUtilsReadSph.h
src/chrono_mkl/: CMakeLists.txt  ChCSR3Matrix.cpp  ChCSR3Matrix.h  ChInteriorPoint.cpp  ChInteriorPoint.h  ChLcpMklSolver.cpp  ChMklEngine.h
src/demos/fea/: CMakeLists.txt  Milad_AC-GaitCycle.cpp  Milad_AC-PlainContact.cpp  Milad_demo_ANCFcontact.cpp  Milad_demo_ArticularCartilage.cpp  Milad_demo_FEA_MESH.cpp  Milad_demo_HEEDS-MDO.cpp  demo_ArticularCartilage.cpp  demo_Milad_ElasticFoundation.cpp
src/demos/fsi/: .demo_FSI_Compressibility_Explicit.cpp.swp  .demo_FSI_CylinderDrop_Implicit.h.swp  .demo_FSI_DamBreak.cpp.swo  .demo_FSI_DamBreak.cpp.swp  CMakeLists.txt  demo_AC_model.cpp  demo_AC_model.h  demo_FSI_Cavity.cpp  demo_FSI_Cavity.h  demo_FSI_Compressibility.cpp  demo_FSI_Compressibility.h  demo_FSI_Compressibility_Explicit.cpp  demo_FSI_Compressibility_Explicit.h  demo_FSI_CylinderDrop_Implicit.cpp  demo_FSI_CylinderDrop_Implicit.h  demo_FSI_DamBreak.cpp  demo_FSI_DamBreak.h  demo_FSI_DamBreak_Explicit.cpp  demo_FSI_DamBreak_Explicit.h  demo_FSI_DamBreak_Flexible_Cube.cpp  demo_FSI_DamBreak_Flexible_Cube.h  demo_FSI_DamBreak_Flexible_Shell.cpp  demo_FSI_DamBreak_Flexible_Shell.h  demo_FSI_Fish.cpp  demo_FSI_Fish.h  demo_FSI_Flexible_Shell.cpp  demo_FSI_Flexible_Shell.h  demo_FSI_Flexible_fin.cpp  demo_FSI_Flexible_fin.h  demo_FSI_KitchenSink_Implicit.cpp  demo_FSI_KitchenSink_Implicit.h  demo_FSI_MultiPhysics.h  demo_FSI_MultuPhysics.cpp  demo_FSI_Poiseuille_flow.cpp  demo_FSI_Poiseuille_flow.h  demo_FSI_Validation.cpp  demo_FSI_Validation.h  demo_FSI_backward_facing_step.cpp  demo_FSI_backward_facing_step.h  demo_FSI_cylinderDrop.cpp  (+12 more)
src/demos/irrlicht/: demo_IRR_mixerNSC_New2.cpp
src/demos/mkl/: CMakeLists.txt  demo_IPballinbucket.cpp  demo_IPbricks.cpp  demo_IPconvergence.cpp  demo_IPtrivial.cpp  demo_ballinbucket.cpp  demo_bricksIP.cpp
src/demos/parallel/: CMakeLists.txt  demo_PAR_mixerNSC_New.cpp  demo_SER_mixerNSC.cpp
src/tests/fsi/: CMakeLists.txt  params_test_fsi_implicit_damBreak.h  params_test_fsi_implicit_staticTank.h  test_fsi_cylinderDrop.cpp  test_fsi_hmmwv_pointCloud.cpp  test_fsi_implicit_damBreak.cpp  test_fsi_implicit_staticTank.cpp  test_fsi_invertedPendulum.cpp
src/unit_tests/core/: CMakeLists.txt  test_AVX.cpp
src/unit_tests/fea/: CMakeLists.txt  test_FEAbrick.cpp  test_FEAshell.cpp
src/unit_tests/mkl/: test_ChCSR3Matrix.cpp
src/unit_tests/parallel/: CMakeLists.txt
